--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,12 @@ defaults:
 category_archive:
   type: liquid
   path: /categories/
+
 tag_archive:
   type: liquid
   path: /tags/
+
+comments:
+  provider: "disqus"
+  disqus:
+    shortname: "thawk-blog"
