--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,7 @@ main:
     url: /categories/
   - title: "标签"
     url: /tags/
+  - title: "FIX解析器"
+    url: /fix-decoder/index.html
   - title: "关于"
     url: /about/
